--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,17 +2,17 @@
 # os-independet defaults
 
 # packages to be installed
-grub_dependencies:
+__grub_dependencies:
   - grub2
 
 # grub mkconfig binary
-grub_mkconfig_command: /usr/bin/grub-mkconfig
+__grub_mkconfig_command: /usr/bin/grub-mkconfig
 
 # grub user config file
-grub_config_file: /etc/default/grub
+__grub_config_file: /etc/default/grub
 
 # grub boot config file
-grub_generated_config_file: /boot/grub/grub.cfg
+__grub_generated_config_file: /boot/grub/grub.cfg
 
 # defaults for grub config
-grub_config_defaults: {}
+__grub_config_defaults: {}
