--- a/vars/redhat.yml
+++ b/vars/redhat.yml
@@ -2,13 +2,13 @@
 # defaults for RedHat distributions
 
 # grub mkconfig binary
-grub_mkconfig_command: /usr/sbin/grub2-mkconfig
+__grub_mkconfig_command: /usr/sbin/grub2-mkconfig
 
 # grub boot config file
-grub_boot_cfg: /boot/grub2/grub.cfg
+__grub_boot_cfg: /boot/grub2/grub.cfg
 
 # defaults for grub config
-grub_config_defaults:
+__grub_config_defaults:
   GRUB_DEFAULT: saved
   GRUB_TIMEOUT: 1
   GRUB_DISTRIBUTOR: "$(sed 's, release .*$,,g' /etc/system-release)"
