--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: update grub config
-  command: "{{ grub_mkconfig_command }} -o '{{ grub_generated_config_file }}'"
+  command: "{{ __grub_mkconfig_command }} -o '{{ __grub_generated_config_file }}'"
   register: grub_update_result
   failed_when: grub_update_result.rc != 0
-  changed_when: false
+  changed_when: true
   when: ansible_virtualization_type != "docker"
