--- a/vars/archlinux.yml
+++ b/vars/archlinux.yml
@@ -2,11 +2,11 @@
 # defaults for Debian distributions
 
 # packages to be installed
-grub_dependencies:
+__grub_dependencies:
   - grub
 
 # defaults for grub config
-grub_config_defaults:
+__grub_config_defaults:
   GRUB_DEFAULT: 0
   GRUB_TIMEOUT: 5
   GRUB_DISTRIBUTOR: "Arch"
