--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,14 +1,12 @@
 ---
-- name: Install dependencies
-  tags: grub2
-  package:
+- name: install dependencies
+  ansible.builtin.package:
     name: "{{ item }}"
     state: present
   loop: "{{ __grub_dependencies + grub_extra_dependencies }}"
 
-- name: Remove unwanted dependencies
-  tags: grub2
-  package:
+- name: remove unwanted dependencies
+  ansible.builtin.package:
     name: "{{ item }}"
     state: absent
   loop: "{{ grub_remove_dependencies }}"
