--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,15 +1,17 @@
 ---
-- name: Include OS-specific variables
-  tags: grub2
-  include_vars: "{{ item }}"
+- name: include OS-specific variables
+  tags: [grub2, always]
+  ansible.builtin.include_vars: "{{ item }}"
   with_first_found:
     - files:
         - "{{ ansible_os_family | lower }}-{{ ansible_distribution_major_version }}.yml"
         - "{{ ansible_os_family | lower }}.yml"
       skip: true
 
-- import_tasks: install.yml
+- name: include installation tasks
   tags: [grub2, grub2_install]
+  import_tasks: install.yml
 
-- import_tasks: configure.yml
+- name: include configuration tasks
   tags: [grub2, grub2_config]
+  import_tasks: configure.yml
