--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: update grub config
-  command: "{{ __grub_mkconfig_command }} -o '{{ __grub_generated_config_file }}'"
+  ansible.builtin.command: "{{ __grub_mkconfig_command }} -o '{{ __grub_generated_config_file }}'"
   register: grub_update_result
   failed_when: grub_update_result.rc != 0
   changed_when: true
