--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -1,18 +1,19 @@
 ---
-- name: Create GRUB config
-  tags: grub2
-  template:
+- name: create GRUB config
+  ansible.builtin.template:
     src: grub.j2
     dest: "{{ __grub_config_file }}"
     owner: root
     group: root
     mode: 0644
     validate: bash -n %s
+    trim_blocks: true
+    lstrip_blocks: true
   notify: update grub config
   vars:
     cfg: "{{ __grub_config_defaults | combine(grub_config) }}"
 
-- name: Force update of GRUB config
-  command: /bin/true
+- name: force update of GRUB config
+  ansible.builtin.command: /bin/true
   notify: update grub config
   when: grub_force_update
